# asset-scraper

./: .gitignore  Dockerfile  README.md  app.json  docker-compose.yml
src/: .dockerignore  pyproject.toml
src/spider/: app.py  scrape.py  task.py
src/spider/rakuten/: scraper.py
src/spider/sbi/: csv_parser.py  definition.py  html_parser.py  scraper.py
